Refactored image relevance scoring and reranking logic in langgraph flow. Updated functions to handle image paths and summaries more effectively, and improved output handling in test functions. Cleaned up unnecessary output in ingestion notebook.

--- a/experiment/langgraph exp/langgraph_flow.ipynb
+++ b/experiment/langgraph exp/langgraph_flow.ipynb
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,67 +1030,90 @@
     "from sentence_transformers import CrossEncoder\n",
     "import os\n",
     "import ollama\n",
-    "\n",
-    "def llm_image_relevance_score(query, image_summary):\n",
+    "def llm_image_relevance_score(query, image_path, image_summary=None):\n",
     "    \"\"\"\n",
-    "    Use VLM to rate the relevance of an image (described by its summary) to the query.\n",
+    "    Use Ollama (minicpm-v:8b) to rate the relevance of an image to the query.\n",
+    "    Passes the image file and, if available, the image summary.\n",
     "    Returns a float score between 0 and 1.\n",
     "    \"\"\"\n",
     "    prompt = f\"\"\"\n",
-    "    You are a veterinary assistant AI. Given the following user query and an image summary, rate how relevant the image is to answering the query.\n",
-    "\n",
+    "    You are a veterinary assistant AI. Given the following user query and an image, rate how relevant the image is to answering the query.\n",
     "    - User Query: \"{query}\"\n",
-    "    - Image Summary: \"{image_summary}\"\n",
-    "\n",
-    "    Respond with a single float between 0 (not relevant at all) and 1 (highly relevant). Only output the number, nothing else.\n",
     "    \"\"\"\n",
+    "    if image_summary:\n",
+    "        prompt += f'- Image Summary: \"{image_summary}\"\\n'\n",
+    "    prompt += \"Respond with a single float between 0 (not relevant at all) and 1 (highly relevant). Only output the number, nothing else.\"\n",
+    "\n",
     "    try:\n",
+    "        messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "        if image_path and os.path.exists(image_path):\n",
+    "            messages[0][\"images\"] = [image_path]\n",
     "        response = ollama.chat(\n",
     "            model=\"minicpm-v:8b\",\n",
-    "            messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+    "            messages=messages,\n",
     "            options={\"temperature\": 0.0}\n",
     "        )\n",
     "        content = response['message']['content'].strip()\n",
-    "        # Extract the first float in the response\n",
     "        score = float(content.split()[0])\n",
-    "        # Clamp to [0, 1]\n",
     "        score = max(0.0, min(1.0, score))\n",
     "        return score\n",
     "    except Exception as e:\n",
-    "        print(f\"[llm_image_relevance_score] Error: {e}. Query: {query[:50]}... Summary: {image_summary[:50]}...\")\n",
+    "        print(f\"[llm_image_relevance_score] Error: {e}. Query: {query[:50]}... Image: {image_path}... Summary: {str(image_summary)[:50]}...\")\n",
     "        return 0.0\n",
     "\n",
-    "def rerank_node_hybrid(state):\n",
+    "def rerank_node_hybrid_v2(state):\n",
     "    query = state['refined_query']\n",
     "    candidates = state['retrieved_docs']\n",
     "\n",
-    "    # Separate docs\n",
-    "    text_candidates = []\n",
-    "    image_candidates = []\n",
     "    text_indices = []\n",
+    "    text_contents = []\n",
     "    image_indices = []\n",
+    "    image_info = []\n",
     "\n",
     "    for idx, doc in enumerate(candidates):\n",
-    "        if doc.get(\"modality\") == \"text\" or doc.get(\"modality\") == \"image_summary\":\n",
-    "            text_candidates.append(doc[\"summary\"])\n",
+    "        modality = doc.get(\"modality\") or (doc.get(\"original_metadata\") or {}).get(\"type\")\n",
+    "        if modality == \"text\":\n",
     "            text_indices.append(idx)\n",
-    "        elif doc.get(\"modality\") == \"image\":\n",
-    "            image_candidates.append(doc)\n",
+    "            doc_id = (doc.get(\"original_metadata\") or {}).get(\"doc_id\") or doc.get(\"doc_id\")\n",
+    "            # Fetch the original document from the docstore\n",
+    "            original_text = None\n",
+    "            if doc_id and docstore:\n",
+    "                try:\n",
+    "                    original = docstore._collection.get(ids=[doc_id], include=[\"documents\"])\n",
+    "                    original_text = original[\"documents\"][0] if original[\"documents\"] else None\n",
+    "                except Exception as e:\n",
+    "                    print(f\"[rerank_node_hybrid_v2] Error fetching original text for doc_id {doc_id}: {e}\")\n",
+    "            if not original_text:\n",
+    "                original_text = doc.get(\"summary\", \"\")\n",
+    "            text_contents.append(original_text)\n",
+    "        elif modality == \"image\":\n",
+    "            # Use the image file for VLM\n",
+    "            image_path = (doc.get(\"original_metadata\") or {}).get(\"image_path\")\n",
+    "            image_summary = (doc.get(\"original_metadata\") or {}).get(\"summary\", \"\")\n",
     "            image_indices.append(idx)\n",
+    "            image_info.append((image_path, image_summary if image_summary else None))\n",
+    "        elif modality == \"image_summary\":\n",
+    "            # Trace to the image file if possible\n",
+    "            image_path = (doc.get(\"original_metadata\") or {}).get(\"image_path\")\n",
+    "            image_summary = doc.get(\"summary\", \"\")\n",
+    "            image_indices.append(idx)\n",
+    "            image_info.append((image_path, image_summary))\n",
+    "        else:\n",
+    "            # Fallback: treat as text\n",
+    "            text_indices.append(idx)\n",
+    "            text_contents.append(doc.get(\"summary\", \"\"))\n",
     "\n",
-    "    # 1. Rerank text and image summaries as text\n",
-    "    if text_candidates:\n",
+    "    # 1. Rerank text docs\n",
+    "    if text_contents:\n",
     "        model = CrossEncoder(\"BAAI/bge-reranker-base\")\n",
-    "        pairs = [(query, summary) for summary in text_candidates]\n",
+    "        pairs = [(query, text) for text in text_contents]\n",
     "        scores = model.predict(pairs)\n",
     "        for idx, score in zip(text_indices, scores):\n",
     "            candidates[idx]['rerank_score'] = float(score)\n",
     "\n",
-    "    # 2. Score images using LLM and their summary\n",
-    "    for idx in image_indices:\n",
-    "        doc = candidates[idx]\n",
-    "        image_summary = doc.get(\"summary\", \"\")\n",
-    "        score = llm_image_relevance_score(query, image_summary)\n",
+    "    # 2. Rerank images (and image summaries) with VLM\n",
+    "    for idx, (image_path, image_summary) in zip(image_indices, image_info):\n",
+    "        score = llm_image_relevance_score(query, image_path, image_summary)\n",
     "        candidates[idx]['rerank_score'] = float(score)\n",
     "\n",
     "    # 3. Sort all by rerank_score\n",
@@ -1109,72 +1132,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total docs after reranking: 26\n",
-      "Top 5 reranked docs (by rerank_score):\n",
-      "Doc 0:\n",
-      "  Doc ID: ffe90423-13a4-4f72-9c9c-13014d5e4ef0\n",
-      "  Type: text\n",
-      "  Rerank Score: 0.8996868133544922\n",
-      "  Summary: Ear canal signs include:\n",
-      "\n",
-      "* Discharge\n",
-      "* Shaking the head\n",
-      "* Scratching/pawing at the ear\n",
-      "\n",
-      "Causes of i...\n",
-      "----------------------------------------\n",
-      "Doc 1:\n",
-      "  Doc ID: c155b851-c3d8-45b3-9509-6f29dba41452\n",
-      "  Type: text\n",
-      "  Rerank Score: 0.8968310356140137\n",
-      "  Summary: Key signs of an ear problem in cats include:\n",
-      "\n",
-      "* Ear scratching or shaking\n",
-      "* Bad odor from the ear\n",
-      "* ...\n",
-      "----------------------------------------\n",
-      "Doc 2:\n",
-      "  Doc ID: 71b93f03-d93f-458d-9f1f-14d7a1d3f8d4\n",
-      "  Type: text\n",
-      "  Rerank Score: 0.8939036130905151\n",
-      "  Summary: Otitis Media in cats is rare and usually caused by an external ear infection that ruptures the eardr...\n",
-      "----------------------------------------\n",
-      "Doc 3:\n",
-      "  Doc ID: 528a70c2-4030-4712-abf1-8dc979f61282\n",
-      "  Type: text\n",
-      "  Rerank Score: 0.874763548374176\n",
-      "  Summary: Here is a concise summary:\n",
-      "\n",
-      "**Bacterial Otitis Externa in Cats**\n",
-      "\n",
-      "Causes: scratches, bites, excess w...\n",
-      "----------------------------------------\n",
-      "Doc 4:\n",
-      "  Doc ID: 61dc1297-3bd3-43c9-adcc-63782f77f690\n",
-      "  Type: text\n",
-      "  Rerank Score: 0.8447167277336121\n",
-      "  Summary: To prevent ear infections and maintain ear health:\n",
-      "\n",
-      "* Bathe cat avoiding water in ears with cotton b...\n",
-      "----------------------------------------\n",
-      "PASS: Docs are sorted by rerank_score descending.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def test_rerank_node(rerank_node, refined_query, retrieved_docs, top_n=5):\n",
     "    # Build the state as expected by rerank_node\n",
     "    state = {\n",
-    "        \"refined_query\": refined_query,\n",
-    "        \"retrieved_docs\": retrieved_docs\n",
-    "    }\n",
+    "      \"refined_query\": refined_query,\n",
+    "      \"retrieved_docs\": retrieved_docs,\n",
+    "      \"docstore\": retriever.docstore  # or whatever your docstore object is\n",
+    "     }\n",
     "    # Call the rerank node\n",
     "    new_state = rerank_node(state)\n",
+    "    global reranked_docs\n",
     "    reranked_docs = new_state.get(\"reranked_docs\", [])\n",
     "    print(f\"Total docs after reranking: {len(reranked_docs)}\")\n",
     "    print(f\"Top {top_n} reranked docs (by rerank_score):\")\n",
@@ -1196,7 +1165,145 @@
     "\n",
     "# Example usage:\n",
     "refined_query = \"What are possible causes and diagnostic steps for chronic ear infections or otitis in cats, characterized by visible brownish-orange debris, discharge, and wounds in the ear canal, potentially accompanied by signs of infection such as redness, swelling, and bleeding, and how can these conditions be distinguished from other potential health issues that may affect a cat's auditory system\"\n",
-    "test_rerank_node(rerank_node_hybrid, refined_query, test_retrived_doc)"
+    "test_rerank_node(rerank_node_hybrid_v2, refined_query, test_retrived_doc)\n",
+    "reranked_docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 Images and Original Texts:\n",
+      "\n",
+      "Doc 0:\n",
+      "  Doc ID: c155b851-c3d8-45b3-9509-6f29dba41452\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.9639337062835693\n",
+      "  Original Text:\n",
+      "    Structure of the Ears 206 • CAT OWNER’S HOME VETERINARY HANDBOOK Your cat has an ear problem if you notice ear scratching, repeated head shaking, a bad odor emanating from the ear, or large amounts of waxy dis- charge or pus draining. In a younger cat, the most likely cause is ear mites, but other diseases of the ears (such as allergies) do occur. Diseases of the middle ear cause head tilt and the loss of hearing. Diseases of the inner ear affect the balance center. The cat wobbles, circles, fal...\n",
+      "------------------------------------------------------------\n",
+      "Doc 1:\n",
+      "  Doc ID: cd66810a-2a7e-4a9d-8ee0-2c88671b37bf\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.9461669325828552\n",
+      "  Original Text:\n",
+      "    BITES AND LACERATIONS Cats give and receive painful bites and scratches that are prone to severe infec- tion. The pinna is a frequent site for such injuries. Some occur during mating.\n",
+      "------------------------------------------------------------\n",
+      "Doc 2:\n",
+      "  Doc ID: 71b93f03-d93f-458d-9f1f-14d7a1d3f8d4\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.8675187826156616\n",
+      "  Original Text:\n",
+      "    Otitis Media This condition, a middle ear infection, is not common in cats. Most cases result from an external ear infection that ruptures the eardrum. Tonsillitis and mouth and sinus infections can travel to the middle ear through the Eustachian tube, a passage that connects the middle ear to the back of the throat. Rarely, bacteria gain entrance through the bloodstream. —o—\n",
+      "------------------------------------------------------------\n",
+      "Doc 3:\n",
+      "  Doc ID: ba3b992a-476a-445b-8706-608fea8a8ac9_context\n",
+      "  Type: image_summary\n",
+      "  Rerank Score: 0.85\n",
+      "  Image Path: ./figures/Ears/figure-6-9.jpg\n",
+      "  Image Summary:\n",
+      "    The image depicts an individual applying medication into the ear canal of what appears to be a cat. The context provided suggests this is part of a veterinary handbook, specifically instructing how to apply ointment or instill drops in a pet's ear for treatment purposes. This demonstrates proper technique and care when administering medications directly into a pet’s ear canal.\n",
+      "------------------------------------------------------------\n",
+      "Doc 4:\n",
+      "  Doc ID: 9a488c79-c0a4-449e-8bf9-52db769a8331\n",
+      "  Type: image\n",
+      "  Rerank Score: 0.85\n",
+      "  Image Path: ./figures/Ears/figure-4-7.jpg\n",
+      "  Image Summary:\n",
+      "    ./figures/Ears/figure-4-7.jpg\n",
+      "------------------------------------------------------------\n",
+      "Doc 5:\n",
+      "  Doc ID: 9a488c79-c0a4-449e-8bf9-52db769a8331_context\n",
+      "  Type: image_summary\n",
+      "  Rerank Score: 0.85\n",
+      "  Image Path: ./figures/Ears/figure-4-7.jpg\n",
+      "  Image Summary:\n",
+      "    The image shows a veterinary assistant performing an ear cleaning procedure on a cat. The veterinarian is using their fingers to gently hold down the cat's ear while another hand appears to be applying or massaging an ear-cleaning solution into the base of the cat's ear canal, as described in the local text context provided. This demonstrates proper technique for maintaining cleanliness and health within a cat's ears.\n",
+      "------------------------------------------------------------\n",
+      "Doc 6:\n",
+      "  Doc ID: 528a70c2-4030-4712-abf1-8dc979f61282\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.7750948071479797\n",
+      "  Original Text:\n",
+      "    BACTERIAL OTITIS EXTERNA Bacterial infections in the ear canal are frequently caused by scratches to the skin or cat bites. Some begin in an ear canal that contains excessive amounts of wax, cellular debris, or foreign material. Ear mite infections are often the cause of bacterial otitis. Signs of an infected ear canal are shaking the head, scratching at the affected ear, and an unpleasant odor. The cat may tilt or carry her head down on the painful side and exhibit tenderness when the ear is to...\n",
+      "------------------------------------------------------------\n",
+      "Doc 7:\n",
+      "  Doc ID: ffe90423-13a4-4f72-9c9c-13014d5e4ef0\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.7660390734672546\n",
+      "  Original Text:\n",
+      "    The Ear Canal Signs of irritation or infection in the ear canals are discharge, shaking the head, and scratching and pawing at the ear. Common causes are listed here.\n",
+      "------------------------------------------------------------\n",
+      "Doc 8:\n",
+      "  Doc ID: 68ab2b9c-ff2e-43da-92ee-8349dc8dda06\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.7191415429115295\n",
+      "  Original Text:\n",
+      "    CERUMINOUS GLAND PROBLEMS Benign ceruminous (wax) gland cysts are not uncommon in cats’ ears. These cysts appear as dark lesions throughout the ear. They may cluster and look like a bunch of grapes. If these start to block the ear canal, they should be removed; otherwise they do not generally cause a problem. Cats are also susceptible to ceruminous gland tumors in their ears, which are often malignant adenocarcinomas. These need to be distinguished from ear polyps.\n",
+      "------------------------------------------------------------\n",
+      "Doc 9:\n",
+      "  Doc ID: 61dc1297-3bd3-43c9-adcc-63782f77f690\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.6807350516319275\n",
+      "  Original Text:\n",
+      "    Basic Ear Care If you bathe your cat, prevent water from getting into her ears by inserting cotton balls at the opening of the ear canals. Wet ear canals can predispose a cat to ear infections. If your cat has been in a fight, check the ears for any cuts or bites that may need to be treated (see The Pinna, page 209). Routine ear cleaning is not required. Some wax is necessary to maintain the health of the tissues. However, ears should be cleaned when there is an\n",
+      "------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display_top_10_imgs_and_texts(reranked_docs, docstore):\n",
+    "    print(\"Top 10 Images and Original Texts:\\n\")\n",
+    "    count = 0\n",
+    "    for doc in reranked_docs:\n",
+    "        if count >= 10:\n",
+    "            break\n",
+    "        modality = (doc.get('original_metadata') or {}).get('type') or doc.get('modality')\n",
+    "        doc_id = doc.get('doc_id') or (doc.get('original_metadata') or {}).get('doc_id')\n",
+    "        score = doc.get('rerank_score')\n",
+    "        print(f\"Doc {count}:\")\n",
+    "        print(f\"  Doc ID: {doc_id}\")\n",
+    "        print(f\"  Type: {modality}\")\n",
+    "        print(f\"  Rerank Score: {score}\")\n",
+    "        if modality == \"text\":\n",
+    "            # Fetch original text from docstore\n",
+    "            original_text = None\n",
+    "            if doc_id and docstore:\n",
+    "                try:\n",
+    "                    original = docstore._collection.get(ids=[doc_id], include=[\"documents\"])\n",
+    "                    original_text = original[\"documents\"][0] if original[\"documents\"] else None\n",
+    "                except Exception as e:\n",
+    "                    print(f\"    [Error fetching original text for doc_id {doc_id}: {e}]\")\n",
+    "            if not original_text:\n",
+    "                original_text = doc.get(\"summary\", \"\")\n",
+    "            print(\"  Original Text:\")\n",
+    "            print(f\"    {original_text[:500]}{'...' if len(original_text) > 500 else ''}\")\n",
+    "        elif modality in (\"image\", \"image_summary\"):\n",
+    "            image_path = (doc.get(\"original_metadata\") or {}).get(\"image_path\")\n",
+    "            print(f\"  Image Path: {image_path}\")\n",
+    "            print(\"  Image Summary:\")\n",
+    "            print(f\"    {doc.get('summary', '')[:500]}{'...' if len(doc.get('summary', '')) > 500 else ''}\")\n",
+    "        else:\n",
+    "            print(\"  [Unknown modality]\")\n",
+    "        print(\"-\" * 60)\n",
+    "        count += 1\n",
+    "\n",
+    "# Example usage:\n",
+    "display_top_10_imgs_and_texts(reranked_docs, retriever.docstore)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Thinking Node\n",
+    "\n",
+    "This step is to take all on-hand info and reranked doc to make analysis. Think about user's intent, what they want to know, what they need to know, also what AI need to know."
    ]
   }
  ],
