--- a/ingestion.ipynb
+++ b/ingestion.ipynb
@@ -127,30 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-1-1.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-2-3.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-3-5.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-6-10.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-8-12.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-9-14.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-10-15.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-11-17.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-12-18.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-13-19.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-14-20.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-15-21.jpg\n",
-      "Successfully deleted irrelevant image: ./figures/Ears/figure-16-22.jpg\n",
-      "Finished deleting images. Total deleted: 13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "delete_irrelevant_images(images_raw, relevant_images_to_summarize)"
    ]
@@ -172,7 +151,7 @@
     }
    ],
    "source": [
-    "# import os\n",
+    "# System sound, when done\n",
     "sound_file = \"/System/Library/Sounds/Glass.aiff\"\n",
     "os.system(f\"afplay '{sound_file}'\")"
    ]
